--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Image</title>
 </head>
 <body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <img src="./image.jpg" alt="Uploaded Image" style="max-width: 100%; height: auto;">
+    <img src="./monet.jpg" alt="Uploaded Image" style="max-width: 100%; height: auto;">
 </body>
 </html>
