--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Image</title>
+    <title>Rive Animation</title>
+    <script src="https://unpkg.com/@rive-app/canvas@2.10.0"></script>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
 </head>
-<body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <img src="./monet.jpg" alt="Uploaded Image" style="max-width: 100%; height: auto;">
+<body>
+    <h1>Rive Animation Preview</h1>
+    <canvas id="riveCanvas" width="500" height="500"></canvas>
+
+    <script>
+        const rive = new Rive({
+            src: "monet.riv",  // Path to your Rive file
+            canvas: document.getElementById("riveCanvas"),
+            autoplay: true,
+        });
+    </script>
 </body>
 </html>
